CSS Alignment Fixes

--- a/src/acceleratorcommunity/src/assets/about.module.css
+++ b/src/acceleratorcommunity/src/assets/about.module.css
@@ -1,16 +1,14 @@
 .aboutContainer {
-  /* width: 30%; */
-  background: whitesmoke;
-  margin-left:10px;
-  padding: 0.3125rem;
+  background: #F9F9F9;
+  padding: 12px 16px;
 }
 
 .accordionItem {
-  margin: 10px;
+  margin-bottom: 18px;
 }
 
 .aboutHeader {
-  margin-left: 10px;
+  font-size: 20px;
   color: #283895;
 }
 
@@ -19,5 +17,6 @@
 .accordionItem {
   color: #000000;
   background-color: white;
-  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+  /* box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%); */
+  box-shadow: none;
 }
